force-app/main/default/objects/Account/fields/Global_Account__c.field-meta.xml
<CustomField>
    <fullName>Global_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies top-level global corporate accounts used in the hierarchy explorer.</inlineHelpText>
    <label>Global account</label>
    <type>Checkbox</type>
</CustomField>