force-app/main/default/objects/Account/fields/IDV_Result__c.field-meta.xml
<CustomField>
    <fullName>IDV_Result__c</fullName>
    <label>IDV Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Not Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>